--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,22 +5,106 @@
     margin: 0;
     padding: 0;
 }
+
+//Colores Fondo
+$fondoNab:rgba(0, 0, 0, 0.436);
+$fondoForm: #ddddddc1;
+$fondoImput: #ffffffe5;
+$fondoWhite: #ffffff;
+$fondoBlue: #17537a;
+
+//Colores Texto
+$textBlack: #000000;
+$textWhite: #ffffff;
+$textBlue:#18537a;
+$textRed:#ff0000;
+
+//Tamaños
+$all: 100%;
+
 body{
-    .paralax{
+    header{
         position: relative;
-        width: 100%;
-        height: 100vh;
-        img{
-            position: absolute;
-            height: 100%;
+        .paralax{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
             width: 100%;
+            height: 100vh;
+            overflow:hidden;
+            img{
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                object-fit: cover;
+            }
+        }
+        /*Barra de Navegacion*/
+        .navbar{
+            position: absolute;
             top: 0;
-            left: 0;
+            width: 100%;
+            background-color: $fondoNab;
+            margin-top: 5px;
+            .navbar-nav {
+                --bs-nav-link-hover-color: #ffffff;
+                .nav-link{
+                    color: $textWhite;
+                }
+            }
+            .sub a:before{
+                content: '';
+                position: absolute;
+                background: #ffffff;
+                width: 0;
+                height: 3px;
+                bottom: 0;
+                left: 0;
+                transition: all 300ms ease-out;
+
+            }
+            .sub a:hover:before{
+                width: 100%;
+            }
+            .navbar-toggler-icon {
+                width: 20px;
+                height: 20px;
+            }
         }
     }
     main{
         section{
             padding: 40px;
+            h1{
+                text-align: center;
+            }
+            p{
+                text-align: justify;
+            }
         }
     }
+}
+
+
+/*Modal Login - Politica y Uso*/
+.modal{
+    --bs-modal-header-border-color:none;
+    --bs-modal-footer-border-color:none;
+    .modal-content{
+        background: $fondoForm;
+        color: $textBlack;
+        .formLogin{
+            background: $fondoImput;
+        }
+    }
+    .modal-backdrop{
+        --bs-backdrop-zindex:1;
+    }
+}
+.modal-backdrop {
+    --bs-backdrop-zindex: 1;
+
 }
